--- a/dancefloor.html
+++ b/dancefloor.html
@@ -6,11 +6,24 @@
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
+    <script src="src/movingTestObject.js"></script>
+    <script src="src/staticTestObject.js"></script>
+    <script src="src/fixedOffsetDancer.js"></script>
+    <script src="src/rotaryDancer.js"></script>
+    <script src="src/discoBall.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>    </div>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a blinky dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MovingTestObject">add a moving test object</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="StaticTestObject">add a static test object</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="FODancer">add a follower</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="RotaryDancer">add a rotator</a>
+    </div>
+    <div class="container">
+      
+    </div>
     <script src="src/init.js"></script>
   </body>
 </html>
