clean code and style html page

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -19,13 +19,14 @@
   <body>
     <div class="topbar">
       <span class="title">Object Dance Party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="FODancer" data-is-follower="true">Fixed Follower</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="RotaryDancer" data-is-follower="true">Rotator</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="ExtRotaryDancer" data-is-follower="true">Ext Rotator</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="AwkwardDancer" data-is-follower="true">Socially Awkward</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="WeirdRotaryDancer" data-is-follower="true">Something Weird</a>
-      <a href="#" id="startTheParty" class="startTheParty">Start The Party!</a>
-      <a href="#" id="stopTheParty" class="stopTheParty">Stop The Party :(</a>
+      <button href="#" class="addDancerButton darkblue" data-dancer-maker-function-name="FODancer" data-is-follower="true">Stalky Susan</button>
+      <button href="#" class="addDancerButton lightblue" data-dancer-maker-function-name="RotaryDancer" data-is-follower="true">Swinging Steve</button>
+      <button href="#" class="addDancerButton cyan" data-dancer-maker-function-name="ExtRotaryDancer" data-is-follower="true">Tango Tammy</button>
+      <button href="#" class="addDancerButton green awkwardDancer" data-dancer-maker-function-name="AwkwardDancer" data-is-follower="true">Awkward Alvin</button>
+      <button href="#" class="addDancerButton violet" data-dancer-maker-function-name="WeirdRotaryDancer" data-is-follower="true">Whacko Wayne</button>
+      <button href="#" id="startTheParty" class="startTheParty orange">Start The Party!</button>
+      <button href="#" id="stopTheParty" class="stopTheParty red">Stop The Party :(</button>
+      <button href="#" id="killThemAll" class="stopTheParty red">KILL</button>
 <!--       <span class="textHint">m: Moving s: static</span> -->
     </div>
     <script src="src/init.js"></script>
